--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ pylint
 pytest
 opencv-python
 scipy
-sklearn
-tensorflow==1.7
+scikit-learn
+tensorflow==2.13.0rc2
 typing
 wheel
-numpy==1.16.2
-
+numpy==1.22
